// Vitest Snapshot v1

exports[`alert > should render 1`] = `
<div>
  <div
    class="rounded-md bg-green-500/10 p-4"
  >
    <div
      class="flex items-center"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6 text-green-500"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="font-medium text-green-800 dark:text-green-400"
        >
          Success
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`alert > should render additional classNames 1`] = `
<div>
  <div
    class="rounded-md bg-green-500/10 p-4 grow"
  >
    <div
      class="flex items-center"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6 text-green-500"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="font-medium text-green-800 dark:text-green-400"
        >
          Success
        </p>
      </div>
    </div>
  </div>
</div>
`;
